--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 jupyter==1.0.0
 keras==2.3.1
-numpy==1.18.3
-tensorflow==2.2.0rc3
+numpy==1.19.0rc1
+tensorflow==2.2.0
 matplotlib==3.2.1
 pandas==1.0.3
 pillow==7.1.2
 sklearn==0.0
+lime==0.2.0.0
